chore(dbaas-client): clear the Sonar smells surfaced on DatabasePool
Touching DatabasePool pulled the file's pre-existing smells into the
PR's new-code period, dropping the maintainability rating. Fix what is
fixable: Stream.toList() instead of collect(Collectors.toList()) (the
provider field and sorter are properly generified for it), a private
removeByKey so the enriched removal no longer calls the deprecated
overload, and the missing @deprecated javadoc. The remaining findings —
the 8-parameter constructor and the deprecated DatabaseDefinitionHandler
in the public constructors — cannot change compatibly; they carry
targeted suppressions with the reason.